--- a/src/app/(frontend)/projects/completed/page.module.scss
+++ b/src/app/(frontend)/projects/completed/page.module.scss
@@ -97,5 +97,6 @@
 @media (min-width: 1400px) {
   .page__grid {
     grid-template-columns: repeat(4, 1fr);
+    gap: 40px 20px;
   }
 }
