--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,6 +15,8 @@
   --color-warm: #f5f3eb;
   --color-white: #ffffff;
   --color-card-badge: #4d443e;
+  --color-card-badge-onsale: #c4ab80;
+  --color-card-badge-completed: #b95827;
   --color-success-bg: #d4edda;
   --color-success-text: #155724;
   --color-success-border: #c3e6cb;
